samples/_failures_safe/1761520756_2cb6d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21fb27e5.c: In function ‘main’:
./samples/SAFE/__tmp_21fb27e5.c:148:22: error: ‘compute_d’ undeclared (first use in this function)
  148 |         double det = compute_d
      |                      ^~~~~~~~~
./samples/SAFE/__tmp_21fb27e5.c:148:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_21fb27e5.c:148:9: error: expected ‘,’ or ‘;’ at end of input
  148 |         double det = compute_d
      |         ^~~~~~
./samples/SAFE/__tmp_21fb27e5.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21fb27e5.c:148:9: error: expected declaration or statement at end of input
